# Thunder-JVM

./: CMakeLists.txt  CMakePresets.json  main.cpp
include/: javaCP.h  javaData.h  javaParser.h  types.h
source/: javaData.cpp  javaParser.cpp  types.cpp
testData/: Main.java
